// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actual compiling accepts identical fragment definitions 1`] = `
Map {
  "mockFile" => Object {
    "hash": "hash",
    "isConfigQuery": false,
    "isHook": false,
    "isStaticQuery": false,
    "name": "mockFileQuery",
    "originalText": "query mockFileQuery {
           allPostsJson {
             nodes {
               ...PostsJsonFragment
             }
          }
        }

        fragment PostsJsonFragment on PostsJson {
          id
        }",
    "path": "mockFile",
    "templatePath": "mockFile",
    "text": "fragment PostsJsonFragment on PostsJson {
  id
}

query mockFileQuery {
  allPostsJson {
    nodes {
      ...PostsJsonFragment
    }
  }
}",
  },
}
`;

exports[`actual compiling adds fragments from different documents 1`] = `
Object {
  "hash": "hash",
  "isConfigQuery": false,
  "isHook": false,
  "isStaticQuery": false,
  "name": "mockFileQuery",
  "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 ...PostsJsonFragment
               }
            }
          }",
  "path": "mockFile",
  "templatePath": "mockFile",
  "text": "fragment PostsJsonFragment on PostsJson {
  id
}

query mockFileQuery {
  allPostsJson {
    nodes {
      ...PostsJsonFragment
    }
  }
}",
}
`;

exports[`actual compiling adds fragments from same documents 1`] = `
Object {
  "hash": "hash",
  "isConfigQuery": false,
  "isHook": false,
  "isStaticQuery": false,
  "name": "mockFileQuery",
  "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 ...PostsJsonFragment
               }
            }
          }

          fragment PostsJsonFragment on PostsJson {
            id
          }",
  "path": "mockFile",
  "templatePath": "mockFile",
  "text": "fragment PostsJsonFragment on PostsJson {
  id
}

query mockFileQuery {
  allPostsJson {
    nodes {
      ...PostsJsonFragment
    }
  }
}",
}
`;

exports[`actual compiling compiles a query 1`] = `
Object {
  "hash": "hash",
  "isConfigQuery": false,
  "isHook": false,
  "isStaticQuery": false,
  "name": "mockFileQuery",
  "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 id
               }
            }
          }",
  "path": "mockFile",
  "templatePath": "mockFile",
  "text": "query mockFileQuery {
  allPostsJson {
    nodes {
      id
    }
  }
}",
}
`;

exports[`actual compiling compiles static query 1`] = `
Object {
  "hash": "hash",
  "id": Any<String>,
  "isConfigQuery": false,
  "isHook": false,
  "isStaticQuery": true,
  "name": "mockFileQuery",
  "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 id
               }
            }
          }",
  "path": "mockFile",
  "templatePath": "mockFile",
  "text": "query mockFileQuery {
  allPostsJson {
    nodes {
      id
    }
  }
}",
}
`;

exports[`actual compiling errors on double root 1`] = `
Array [
  Object {
    "context": Object {
      "afterCodeFrame": "  1 | query anotherQueryAndMockFileQuery {
  2 |   allPostsJson {
  3 |     #...
  4 |   }
  5 |   allPostsJson {
  6 |     #...
  7 |   }
  8 | }",
      "beforeCodeFrame": "   1 | query mockFileQuery {
   2 |   allPostsJson {
   3 |     #...
   4 |   }
   5 | }
   6 |
   7 | query AnotherQuery {
   8 |   allPostsJson {
   9 |     #...
  10 |   }
  11 | }",
      "name": "AnotherQuery",
      "otherName": "mockFileQuery",
    },
    "filePath": "mockFile",
    "id": "85910",
  },
]
`;

exports[`actual compiling errors on double root 2`] = `
Map {
  "mockFile" => Object {
    "hash": "hash",
    "isConfigQuery": false,
    "isHook": false,
    "isStaticQuery": false,
    "name": "mockFileQuery",
    "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 id
               }
            }
          }

          query AnotherQuery {
            allPostsJson {
              nodes {
                id
              }
            }
          }",
    "path": "mockFile",
    "templatePath": "mockFile",
    "text": "query mockFileQuery {
  allPostsJson {
    nodes {
      id
    }
  }
}",
  },
}
`;

exports[`actual compiling handles fragments that use other fragments 1`] = `
Object {
  "hash": "hash",
  "isConfigQuery": false,
  "isHook": false,
  "isStaticQuery": false,
  "name": "mockFileQuery",
  "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 ...PostsJsonFragment
               }
            }
          }",
  "path": "mockFile",
  "templatePath": "mockFile",
  "text": "fragment PostsJsonFragment on PostsJson {
  id
  ...AnotherPostsJsonFragment
}

fragment AnotherPostsJsonFragment on PostsJson {
  text
}

query mockFileQuery {
  allPostsJson {
    nodes {
      ...PostsJsonFragment
    }
  }
}",
}
`;

exports[`actual compiling removes unused fragments from documents 1`] = `
Object {
  "hash": "hash",
  "isConfigQuery": false,
  "isHook": false,
  "isStaticQuery": false,
  "name": "mockFileQuery",
  "originalText": "query mockFileQuery {
             allPostsJson {
               nodes {
                 ...PostsJsonFragment
               }
            }
          }

          fragment PostsJsonFragment on PostsJson {
            id
          }

          fragment UnusedFragment on PostsJson {
            id
          }",
  "path": "mockFile",
  "templatePath": "mockFile",
  "text": "fragment PostsJsonFragment on PostsJson {
  id
}

query mockFileQuery {
  allPostsJson {
    nodes {
      ...PostsJsonFragment
    }
  }
}",
}
`;
